[package]
name = "cityhash-clickhouse-sys"
version = "1.0.2"
authors = ["Ahmed Riza"]
edition = "2021"
license = "MIT"
description = "Rust binding of Google CityHash algorithm as used in ClickHouse."
repository = "https://github.com/ahmedriza/cityhash-clickhouse-sys"  
keywords = ["hash", "string", "gamedev", "hasher", "hashmap"]
categories = ["algorithms", "external-ffi-bindings", "no-std"]

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
rustc-args = ["-Ctarget-feature=+sse4.2"]
rustdoc-args = ["-Ctarget-feature=+sse4.2"]
