[package]
name = "clickhouse-experiments-storage"
description = "ClickHouse Experiments Storage"
version = "0.1.0"
edition = "2024"

# --------------------------------------------------------------------------------------------------

[dependencies]
anyhow = "1"
byteorder = "1"
cityhash-sys = "=1.0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"

[profile.release]
debug = 1

[dev-dependencies]
